# PySMLFM

./: .flake8  .pylintrc  README.md  pyproject.toml  setup.cfg
.github/workflows/: pypi.yml  python-package.yml  testpypi.yml  tests.yml
src/smlfm/: __init__.py  config.py  fiji_app.py  fitting.py  fourier_microscope.py  localisation_file.py  localisations.py  micro_lens_array.py  output_files.py
src/smlfm/data/: default-config.json
src/smlfm/graphs/: __init__.py  add_watermark.py  draw_3d_locs.py  draw_histogram.py  draw_locs.py  draw_locs_csv.py  draw_locs_normalised.py  draw_mla.py  draw_occurrences.py  reconstruct_results.py
src/smlfm_cli/: app.py
src/smlfm_gui/: app.py  app_model.py  assets.py  cfg_dialog.py  config_cfg_dialog.py  config_frame.py  consts.py  correct_cfg_dialog.py  correct_frame.py  csv_frame.py  figure_window.py  filter_cfg_dialog.py  filter_frame.py  fit_cfg_dialog.py  fit_frame.py  optics_cfg_dialog.py  optics_frame.py
tests/: test_config.py
