[project]
name = "PySMLFM"
version = "0.6.1-beta"
description = "Single Molecule Light Field Microscopy Reconstruction"
authors = [
    {name = "Teledyne Photometrics"},
    {name = "Tomáš Hanák", email = "tomas.hanak@teledyne.com"},
]
keywords = ["microscopy", "lightfield"]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

dependencies = [
    "numpy ~= 1.20",
    "scikit-learn ~= 1.3",
    "matplotlib ~= 3.6",  # From conda-forge channel it installs matplotlib-base
    "tksvg ~= 0.7",
]

[project.optional-dependencies]
dev = [
    "pytest ~= 6.0",
]
fiji = [
    "pyimagej ~= 1.4",
]

[project.urls]
# This doesn't show up with 'pip show', used a workaround via setup.cfg
homepage = "https://github.com/Photometrics/PySMLFM"

[project.scripts]
smlfm-cli = "smlfm_cli.app:app"

[project.gui-scripts]
smlfm-gui = "smlfm_gui.app:app"

[build-system]
requires = ["setuptools >= 64.0", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "smlfm", "smlfm.data", "smlfm.graphs",
    "smlfm_cli",
    "smlfm_gui", "smlfm_gui.data"
]
exclude = []

[tool.setuptools.package-data]
"smlfm" = ["data/*"]
"smlfm_gui" = ["data/*"]

#[tool.setuptools.exclude-package-data]
#"*" = [".gitattributes"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ""
testpaths = [
    "tests",
]
